--- a/resume.html
+++ b/resume.html
@@ -51,17 +51,17 @@
 							<div class="wrapper">
 								<div class="inner">
 									<!-- Adobe's PDF Embbed API -->
-									<div id="adobe-dc-view" style="width: 800px;"></div>
-										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-											<script type="text/javascript">
-												document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-												var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
-												adobeDCView.previewFile({
-												content:{location: {url: "resume.pdf"}},
-												metaData:{fileName: "Tristan_Phillips_Resume.pdf"}
-											}, {embedMode: "IN_LINE"});
-										});
-										</script>
+									<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+<script type="text/javascript">
+	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
+		var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
+		adobeDCView.previewFile({
+			content:{location: {url: "resume.pdf"}},
+			metaData:{fileName: "Tristan_Phillips_Resume.pdf"}
+		}, {embedMode: "SIZED_CONTAINER"});
+	});
+</script>
 								</div>
 							</div>
 					</section>
@@ -98,7 +98,7 @@
 							<li class="icon brands fa-github"><a href="https://github.com/tkphillips" target="_blank" rel="noopener noreferrer">github.com/tkphillips</a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Template designed by: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</section>
