--- a/resume.html
+++ b/resume.html
@@ -51,17 +51,17 @@
 							<div class="wrapper">
 								<div class="inner">
 									<!-- Adobe's PDF Embbed API -->
-									<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
-<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-<script type="text/javascript">
-	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-		var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
-		adobeDCView.previewFile({
-			content:{location: {url: "resume.pdf"}},
-			metaData:{fileName: "Tristan_Phillips_Resume.pdf"}
-		}, {embedMode: "SIZED_CONTAINER"});
-	});
-</script>
+									<div id="adobe-dc-view" style="width: 800px;"></div>
+										<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+											<script type="text/javascript">
+												document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
+												var adobeDCView = new AdobeDC.View({clientId: "5bbd4070461f4c55860e4d9f8175a944", divId: "adobe-dc-view"});
+												adobeDCView.previewFile({
+												content:{location: {url: "resume.pdf"}},
+												metaData:{fileName: "Tristan_Phillips_Resume.pdf"}
+											}, {embedMode: "IN_LINE"});
+										});
+										</script>
 								</div>
 							</div>
 					</section>
