--- a/projects.html
+++ b/projects.html
@@ -62,9 +62,11 @@
 												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
 												<article>
-													<h3>This Website</h3>
-													<p><span class="image left"><img src="images/htmlcode.png" alt="" /></span>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien. Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-													<a href="projects" class="special">Details</a>
+													<h3>This Website (tristankphillips.com)</h3>
+													<p><span class="image left"><img src="images/htmlcode.png" alt="" /></span>In an effort to learn HTML I decided to start a personal website to serve as an online business card and resumé. 
+														After learning enough to get this webpage up and running I now know that it involves learning three new languages; HTML, CSS, and JavaScript. 
+														This website is an on-going project and will continue to grow as I get more comfortable with these languages. You can track the progress of the website and read its source code in the details below.</p>
+													<a href="https://github.com/tkphillips/tristankphillips.com" target="_blank" rel="noopener noreferrer" class="special">Details</a><a href="https://github.com/tkphillips" target="_blank" rel="noopener noreferrer">github.com/tkphillips</a></li>
 												</article>
 												<article>
 													<h3>Project 2</h3>
