--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 													<p><span class="image left"><img src="images/htmlcode.png" alt="" /></span>In an effort to learn HTML I decided to start a personal website to serve as an online business card and resumé. 
 														After learning enough to get this webpage up and running I now know that it involves learning three new languages; HTML, CSS, and JavaScript. 
 														This website is an on-going project and will continue to grow as I get more comfortable with these languages. You can track the progress of the website and read its source code in the details below.</p>
-													<a href="https://github.com/tkphillips/tristankphillips.com" target="_blank" rel="noopener noreferrer" class="special">Details</a><a href="https://github.com/tkphillips" target="_blank" rel="noopener noreferrer">github.com/tkphillips</a></li>
+													<a href="https://github.com/tkphillips/tristankphillips.com" target="_blank" rel="noopener noreferrer" class="special">Details</a>
 												</article>
 												<article>
 													<h3>Project 2</h3>
