--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index">Home</a></li>
-								<li><a href="about">About Me</a></li>
 								<li><a href="projects">Projects</a></li>
+								<li><a href="resume">Resumé</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
