--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<a href="#" class="image"><img src="images/profile.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>Tristan Phillips is a 23 year old from Tampa, FL. After graduating from the University of Alabama in 2020 he began working as an electrical engineer at R2C Aerospace in Huntsville, AL. </p>
 									</div>
 								</div>
 							</section>
@@ -66,18 +66,17 @@
 							<section id="two" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Explore</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Personal Projects</h3>
-											<p>A log of my hardware and software projects</p>
+											<p>A log of hardware and software projects</p>
 											<a href="projects" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Resumé</h3>
-											<p>Click here to view, download, or print my resumé</p>
+											<p>Click here to view, download, or print</p>
 											<a href="resume" class="special">Learn more</a>
 										</article>
 									</section>
