--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 														a 3D printed gimbal I am able to control the laser remotely along with streaming video so I can see all her antics.
 													</p>
 													<iframe width="420" height="315"
-														src="https://youtu.be/YaM6udixKHs">
+														src="https://www.youtube.com/watch?v=YaM6udixKHs">
 													</iframe>
 													<a href="projects" class="special">Details</a>
 												</article>
